@@ -3,16 +3,15 @@
 - name: Create u2f database
   mysql_db: name={{ database_u2f_name }} state=present login_user=root login_password={{ mariadb_root_password | vault(vault_keydir) }}
 
-# TODO: We do not need this, right?
-#- name: Create u2f deploy DB user with ALL access to u2f database
-#  mysql_user:
-#    name: "{{ database_u2f_deploy_user }}"
-#    host: "%"
-#    password: "{{ database_u2f_deploy_password | vault(vault_keydir) }}"
-#    priv: "{{ database_u2f_name }}.*:ALL\ PRIVILEGES,GRANT"
-#    login_host: "127.0.0.1"
-#    login_user: "root"
-#    login_password: "{{ mariadb_root_password | vault(vault_keydir) }}"
+- name: Create gateway deploy user with ALL access to u2f database
+  mysql_user:
+    name: "{{ database_gateway_deploy_user }}"
+    host: "%"
+    password: "{{ database_gateway_deploy_password | vault(vault_keydir) }}"
+    priv: "{{ database_u2f_name }}.*:ALL\ PRIVILEGES,GRANT"
+    login_host: "127.0.0.1"
+    login_user: "root"
+    login_password: "{{ mariadb_root_password | vault(vault_keydir) }}"
 
 - name: Create DB user for u2f component
   mysql_user:
