@@ -10,8 +10,8 @@ parameters:
     database_u2f_name:         {{ database_u2f_name }}
     database_u2f_user:         {{ database_u2f_user }}
     database_u2f_password:     {{ database_u2f_password | vault(vault_keydir)}}
-    database_deploy_user:      {{ database_middleware_deploy_user }}
-    database_deploy_password:  {{ database_middleware_deploy_password | vault(vault_keydir) }}
+    database_deploy_user:      {{ database_gateway_deploy_user }}
+    database_deploy_password:  {{ database_gateway_deploy_password | vault(vault_keydir) }}
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
